// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: NotebookPicker Checks that the images column renders an image 1`] = `
<img
  alt="OneNote icon"
  src="https://static2.sharepointonline.com/files/fabric/assets/brand-icons/document/svg/one_16x1.svg"
/>
`;

exports[`Component: NotebookPicker Checks that the last date modified is correct 1`] = `
<div>
  Invalid Date
</div>
`;

exports[`Component: NotebookPicker Checks that the last date modified is correct 2`] = `
<div>
  N/A
</div>
`;
